src/main/java/univr/it/sigma/SigmaParser.java
// Generated from /home/bong/Projects/ProgettoLinguaggi/src/main/java/univr/it/Sigma.g4 by ANTLR 4.13.2
package univr.it.sigma;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class SigmaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WHILE=1, FOR=2, IN=3, IF=4, ELSE=5, PRINT=6, INPUT=7, RETURN=8, SLY=9, 
		ARNOLD=10, ND=11, TYPES=12, TYPEF=13, TYPEA=14, FUNC=15, MAIN=16, PLUS=17, 
		MINUS=18, MUL=19, DIV=20, MOD=21, POW=22, EQ=23, LT=24, GT=25, LE=26, 
		GE=27, NOT=28, AND=29, OR=30, IS=31, DEF=32, TILDE=33, SEMIC=34, DOT=35, 
		COMMA=36, LPAR=37, RPAR=38, LSPAR=39, RSPAR=40, LCBRAC=41, RCBRAC=42, 
		COMMENT=43, LINE_COMMENT=44, WS=45, FLOAT=46, NEG=47, NAT=48, STRING=49, 
		ID=50;
	public static final int
		RULE_main = 0, RULE_block = 1, RULE_funcDef = 2, RULE_funCall = 3, RULE_statement = 4, 
		RULE_declaration = 5, RULE_array = 6, RULE_bExp = 7, RULE_sExp = 8, RULE_sAtoms = 9, 
		RULE_fExp = 10, RULE_fAtoms = 11, RULE_bfComm = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"main", "block", "funcDef", "funCall", "statement", "declaration", "array", 
			"bExp", "sExp", "sAtoms", "fExp", "fAtoms", "bfComm"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'while'", "'for'", "'in'", "'if'", "'else'", "'print'", "'input'", 
			"'ret'", "'sly'", "'arnold'", "'ND'", "'STRING'", "'FLOAT'", "'ARRAY'", 
			"'FUNC'", "'MAIN'", "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", "'='", 
			"'<'", "'>'", "'<='", "'>='", "'not'", "'and'", "'or'", "':'", "'@'", 
			"'~'", "';'", "'.'", "','", "'('", "')'", "'['", "']'", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WHILE", "FOR", "IN", "IF", "ELSE", "PRINT", "INPUT", "RETURN", 
			"SLY", "ARNOLD", "ND", "TYPES", "TYPEF", "TYPEA", "FUNC", "MAIN", "PLUS", 
			"MINUS", "MUL", "DIV", "MOD", "POW", "EQ", "LT", "GT", "LE", "GE", "NOT", 
			"AND", "OR", "IS", "DEF", "TILDE", "SEMIC", "DOT", "COMMA", "LPAR", "RPAR", 
			"LSPAR", "RSPAR", "LCBRAC", "RCBRAC", "COMMENT", "LINE_COMMENT", "WS", 
			"FLOAT", "NEG", "NAT", "STRING", "ID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Sigma.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SigmaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(SigmaParser.DEF, 0); }
		public TerminalNode MAIN() { return getToken(SigmaParser.MAIN, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SigmaParser.EOF, 0); }
		public List<FuncDefContext> funcDef() {
			return getRuleContexts(FuncDefContext.class);
		}
		public FuncDefContext funcDef(int i) {
			return getRuleContext(FuncDefContext.class,i);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SigmaListener ) ((SigmaListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SigmaListener ) ((SigmaListener)listener).exitMain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SigmaVisitor ) return ((SigmaVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_main);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(29);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(26);
					funcDef();
					}
					} 
				}
				setState(31);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(32);
			match(DEF);
			setState(33);
			match(MAIN);
			setState(34);
			block();
			setState(35);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public TerminalNode LCBRAC() { return getToken(SigmaParser.LCBRAC, 0); }
		public TerminalNode RCBRAC() { return getToken(SigmaParser.RCBRAC, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SigmaListener ) ((SigmaListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SigmaListener ) ((SigmaListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SigmaVisitor ) return ((SigmaVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			match(LCBRAC);
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1128103225066326L) != 0)) {
				{
				{
				setState(38);
				statement();
				}
				}
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(44);
			match(RCBRAC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncDefContext extends ParserRuleContext {
		public Token type;
		public TerminalNode DEF() { return getToken(SigmaParser.DEF, 0); }
		public TerminalNode FUNC() { return getToken(SigmaParser.FUNC, 0); }
		public List<TerminalNode> ID() { return getTokens(SigmaParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SigmaParser.ID, i);
		}
		public TerminalNode LPAR() { return getToken(SigmaParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(SigmaParser.RPAR, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public List<TerminalNode> TYPEA() { return getTokens(SigmaParser.TYPEA); }
		public TerminalNode TYPEA(int i) {
			return getToken(SigmaParser.TYPEA, i);
		}
		public List<TerminalNode> TYPES() { return getTokens(SigmaParser.TYPES); }
		public TerminalNode TYPES(int i) {
			return getToken(SigmaParser.TYPES, i);
		}
		public List<TerminalNode> TYPEF() { return getTokens(SigmaParser.TYPEF); }
		public TerminalNode TYPEF(int i) {
			return getToken(SigmaParser.TYPEF, i);
		}
		public List<TerminalNode> TILDE() { return getTokens(SigmaParser.TILDE); }
		public TerminalNode TILDE(int i) {
			return getToken(SigmaParser.TILDE, i);
		}
		public FuncDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SigmaListener ) ((SigmaListener)listener).enterFuncDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SigmaListener ) ((SigmaListener)listener).exitFuncDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SigmaVisitor ) return ((SigmaVisitor<? extends T>)visitor).visitFuncDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncDefContext funcDef() throws RecognitionException {
		FuncDefContext _localctx = new FuncDefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_funcDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(DEF);
			setState(47);
			match(FUNC);
			setState(48);
			match(ID);
			setState(49);
			match(LPAR);
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 28672L) != 0)) {
				{
				setState(50);
				((FuncDefContext)_localctx).type = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 28672L) != 0)) ) {
					((FuncDefContext)_localctx).type = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(51);
				match(ID);
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==TILDE) {
					{
					{
					setState(52);
					match(TILDE);
					setState(53);
					((FuncDefContext)_localctx).type = _input.LT(1);
					_la = _input.LA(1);
					if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 28672L) != 0)) ) {
						((FuncDefContext)_localctx).type = (Token)_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					setState(54);
					match(ID);
					}
					}
					setState(59);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(62);
			match(RPAR);
			setState(63);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunCallContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SigmaParser.ID, 0); }
		public TerminalNode LPAR() { return getToken(SigmaParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(SigmaParser.RPAR, 0); }
		public List<FExpContext> fExp() {
			return getRuleContexts(FExpContext.class);
		}
		public FExpContext fExp(int i) {
			return getRuleContext(FExpContext.class,i);
		}
		public List<SExpContext> sExp() {
			return getRuleContexts(SExpContext.class);
		}
		public SExpContext sExp(int i) {
			return getRuleContext(SExpContext.class,i);
		}
		public List<ArrayContext> array() {
			return getRuleContexts(ArrayContext.class);
		}
		public ArrayContext array(int i) {
			return getRuleContext(ArrayContext.class,i);
		}
		public List<TerminalNode> TILDE() { return getTokens(SigmaParser.TILDE); }
		public TerminalNode TILDE(int i) {
			return getToken(SigmaParser.TILDE, i);
		}
		public FunCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funCall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SigmaListener ) ((SigmaListener)listener).enterFunCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SigmaListener ) ((SigmaListener)listener).exitFunCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SigmaVisitor ) return ((SigmaVisitor<? extends T>)visitor).visitFunCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunCallContext funCall() throws RecognitionException {
		FunCallContext _localctx = new FunCallContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_funCall);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(ID);
			setState(66);
			match(LPAR);
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2184317287530624L) != 0)) {
				{
				setState(70);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(67);
					fExp(0);
					}
					break;
				case 2:
					{
					setState(68);
					sExp(0);
					}
					break;
				case 3:
					{
					setState(69);
					array();
					}
					break;
				}
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==TILDE) {
					{
					{
					setState(72);
					match(TILDE);
					setState(76);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
					case 1:
						{
						setState(73);
						fExp(0);
						}
						break;
					case 2:
						{
						setState(74);
						sExp(0);
						}
						break;
					case 3:
						{
						setState(75);
						array();
						}
						break;
					}
					}
					}
					setState(82);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(85);
			match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PrintStmtContext extends StatementContext {
		public TerminalNode PRINT() { return getToken(SigmaParser.PRINT, 0); }
		public TerminalNode LPAR() { return getToken(SigmaParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(SigmaParser.RPAR, 0); }
		public TerminalNode SEMIC() { return getToken(SigmaParser.SEMIC, 0); }
		public SExpContext sExp() {
			return getRuleContext(SExpContext.class,0);
		}
		public PrintStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SigmaListener ) ((SigmaListener)listener).enterPrintStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SigmaListener ) ((SigmaListener)listener).exitPrintStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SigmaVisitor ) return ((SigmaVisitor<? extends T>)visitor).visitPrintStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ForStmtContext extends StatementContext {
		public TerminalNode FOR() { return getToken(SigmaParser.FOR, 0); }
		public TerminalNode ID() { return getToken(SigmaParser.ID, 0); }
		public TerminalNode IN() { return getToken(SigmaParser.IN, 0); }
		public TerminalNode LPAR() { return getToken(SigmaParser.LPAR, 0); }
		public List<FExpContext> fExp() {
			return getRuleContexts(FExpContext.class);
		}
		public FExpContext fExp(int i) {
			return getRuleContext(FExpContext.class,i);
		}
		public TerminalNode RPAR() { return getToken(SigmaParser.RPAR, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode TILDE() { return getToken(SigmaParser.TILDE, 0); }
		public ForStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SigmaListener ) ((SigmaListener)listener).enterForStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SigmaListener ) ((SigmaListener)listener).exitForStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SigmaVisitor ) return ((SigmaVisitor<? extends T>)visitor).visitForStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class WhileStmtContext extends StatementContext {
		public TerminalNode WHILE() { return getToken(SigmaParser.WHILE, 0); }
		public TerminalNode LPAR() { return getToken(SigmaParser.LPAR, 0); }
		public BExpContext bExp() {
			return getRuleContext(BExpContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(SigmaParser.RPAR, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public WhileStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SigmaListener ) ((SigmaListener)listener).enterWhileStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SigmaListener ) ((SigmaListener)listener).exitWhileStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SigmaVisitor ) return ((SigmaVisitor<? extends T>)visitor).visitWhileStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NdStmtContext extends StatementContext {
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public TerminalNode ND() { return getToken(SigmaParser.ND, 0); }
		public NdStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SigmaListener ) ((SigmaListener)listener).enterNdStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SigmaListener ) ((SigmaListener)listener).exitNdStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SigmaVisitor ) return ((SigmaVisitor<? extends T>)visitor).visitNdStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BfStmtContext extends StatementContext {
		public TerminalNode SLY() { return getToken(SigmaParser.SLY, 0); }
		public TerminalNode LCBRAC() { return getToken(SigmaParser.LCBRAC, 0); }
		public BfCommContext bfComm() {
			return getRuleContext(BfCommContext.class,0);
		}
		public TerminalNode RCBRAC() { return getToken(SigmaParser.RCBRAC, 0); }
		public TerminalNode ARNOLD() { return getToken(SigmaParser.ARNOLD, 0); }
		public BfStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SigmaListener ) ((SigmaListener)listener).enterBfStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SigmaListener ) ((SigmaListener)listener).exitBfStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SigmaVisitor ) return ((SigmaVisitor<? extends T>)visitor).visitBfStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IfElseStmtContext extends StatementContext {
		public TerminalNode IF() { return getToken(SigmaParser.IF, 0); }
		public TerminalNode LPAR() { return getToken(SigmaParser.LPAR, 0); }
		public BExpContext bExp() {
			return getRuleContext(BExpContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(SigmaParser.RPAR, 0); }
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(SigmaParser.ELSE, 0); }
		public IfElseStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SigmaListener ) ((SigmaListener)listener).enterIfElseStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SigmaListener ) ((SigmaListener)listener).exitIfElseStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SigmaVisitor ) return ((SigmaVisitor<? extends T>)visitor).visitIfElseStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DecStmtContext extends StatementContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public TerminalNode SEMIC() { return getToken(SigmaParser.SEMIC, 0); }
		public DecStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SigmaListener ) ((SigmaListener)listener).enterDecStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SigmaListener ) ((SigmaListener)listener).exitDecStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SigmaVisitor ) return ((SigmaVisitor<? extends T>)visitor).visitDecStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ReturnStmtContext extends StatementContext {
		public TerminalNode RETURN() { return getToken(SigmaParser.RETURN, 0); }
		public TerminalNode IS() { return getToken(SigmaParser.IS, 0); }
		public TerminalNode SEMIC() { return getToken(SigmaParser.SEMIC, 0); }
		public SExpContext sExp() {
			return getRuleContext(SExpContext.class,0);
		}
		public FExpContext fExp() {
			return getRuleContext(FExpContext.class,0);
		}
		public ReturnStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SigmaListener ) ((SigmaListener)listener).enterReturnStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SigmaListener ) ((SigmaListener)listener).exitReturnStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SigmaVisitor ) return ((SigmaVisitor<? extends T>)visitor).visitReturnStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ReDecStmtContext extends StatementContext {
		public TerminalNode ID() { return getToken(SigmaParser.ID, 0); }
		public TerminalNode IS() { return getToken(SigmaParser.IS, 0); }
		public TerminalNode SEMIC() { return getToken(SigmaParser.SEMIC, 0); }
		public SExpContext sExp() {
			return getRuleContext(SExpContext.class,0);
		}
		public FExpContext fExp() {
			return getRuleContext(FExpContext.class,0);
		}
		public TerminalNode LSPAR() { return getToken(SigmaParser.LSPAR, 0); }
		public TerminalNode NAT() { return getToken(SigmaParser.NAT, 0); }
		public TerminalNode RSPAR() { return getToken(SigmaParser.RSPAR, 0); }
		public ReDecStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SigmaListener ) ((SigmaListener)listener).enterReDecStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SigmaListener ) ((SigmaListener)listener).exitReDecStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SigmaVisitor ) return ((SigmaVisitor<? extends T>)visitor).visitReDecStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FunStmtContext extends StatementContext {
		public FunCallContext funCall() {
			return getRuleContext(FunCallContext.class,0);
		}
		public TerminalNode SEMIC() { return getToken(SigmaParser.SEMIC, 0); }
		public FunStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SigmaListener ) ((SigmaListener)listener).enterFunStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SigmaListener ) ((SigmaListener)listener).exitFunStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SigmaVisitor ) return ((SigmaVisitor<? extends T>)visitor).visitFunStmt(this);
			else return visitor.visitChildren(this);
		}
	}
